# W4A

./: README.md  shoot.rules
shoot_robot_code_202510/: shoot_rules.sh
shoot_robot_code_202510/src/clean_desktop_robot/launch/: arm_grab.launch  arm_put.launch  recognize_apriltag.launch
shoot_robot_code_202510/src/clean_robot/: CMakeLists.txt
shoot_robot_code_202510/src/clean_robot/src/: apriltag_detect.cpp
shoot_robot_code_202510/src/clean_table_robot/: CMakeLists.txt  package.xml
shoot_robot_code_202510/src/clean_table_robot/docs/: introduce.md
shoot_robot_code_202510/src/clean_table_robot/launch/: arm_grab.launch  arm_part.launch  arm_put.launch  clean_table_robot_w2a.launch
shoot_robot_code_202510/src/clean_table_robot/src/: arm_grab.cpp  arm_part.cpp  complete_flow.cpp  movebase_client.cpp  task_flow.cpp
shoot_robot_code_202510/src/clean_toilet_robot/: CMakeLists.txt  package.xml
shoot_robot_code_202510/src/clean_toilet_robot/src/: arm_grab.cpp  arm_part.cpp
shoot_robot_code_202510/src/lift_robot/: CMakeLists.txt  package.xml
shoot_robot_code_202510/src/lift_robot/docs/: introduce.md
shoot_robot_code_202510/src/lift_robot/launch/: lift_control.launch  lift_robot_w2u.launch
shoot_robot_code_202510/src/lift_robot/src/: apriltag_detect.cpp  lift_robot.cpp  lift_up.cpp  movebase_client.cpp
shoot_robot_code_202510/src/oil_check_robot/: CMakeLists.txt  package.xml
shoot_robot_code_202510/src/oil_check_robot/launch/: leak_deteck.launch  oil_check_w2a.launch  panel_detect.launch  view_check.launch
shoot_robot_code_202510/src/oil_check_robot/rviz/: show.rviz
shoot_robot_code_202510/src/oil_check_robot/scripts/: leak_detect.py  panel_identify.py  pointer_reader.py  pointer_value_convertor.py  tts_player.py  yolo_detector.py
shoot_robot_code_202510/src/oil_check_robot/scripts/rknn_func_watch/: rknn_pool.py  yolo_processor.py
shoot_robot_code_202510/src/oil_check_robot/src/: arm_down.cpp  arm_up.cpp  movebase_client.cpp  task_flow.cpp
shoot_robot_code_202510/src/shoot_robot/: CMakeLists.txt
shoot_robot_code_202510/src/shoot_robot/launch/: shoot_robot_w2c.launch  shoot_robot_w2u.launch  shoot_robot_w4a.launch  shoot_tag_3.launch
shoot_robot_code_202510/src/shoot_robot/src/: apriltag_detect.cpp  shoot_robot.cpp  shoot_robot_last.cpp
src/shoot_robot/: CMakeLists.txt
src/shoot_robot/launch/: shoot_robot_w2a.launch
src/shoot_robot/src/: apriltag_detect.cpp  shoot.cpp  shoot_robot_base.cpp
